--- a/game.css
+++ b/game.css
@@ -6,14 +6,18 @@ body{
 }
 
 .classCanvas{
+  display: flex;
   background-color: black;
 }
 
 .modal{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  position: absolute;
+  color: white;
   width: 100%;
   height: 100%
+}
+
+.score{
+  position:absolute;
+  color: white;
 }
