--- a/game.css
+++ b/game.css
@@ -11,7 +11,8 @@ body{
 }
 
 canvas{
-  border: rgb(24, 23, 23) solid 5px
+  border: rgb(24, 23, 23) solid 5px;
+  width: 100%
 }
 
 .classCanvas{
@@ -27,20 +28,22 @@ canvas{
   align-items: center;
   background-color: black;
   color: white;
-  width: 500;
-  height: 500;
+  width: 52.5%;
+  height: 100%;
+  font-size: 30;
 }
 
 #game-over{
   position: absolute;
   display: none;
+  font-size: 30px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: black;
-  color: white;
-  width: 500;
-  height: 500;
+  color: rgb(114, 9, 9);
+  width: 52.5%;
+  height: 100%;
 }
 
 #pause{
@@ -58,11 +61,15 @@ canvas{
 .instruction-div{
   display: flex;
   flex-direction: column;
-  font-size: 12;
-  color: yellow
+  align-items: center;
+  font-size: 22;
+  color: yellow;
+  width: 100%;
+  height: 100%;
 }
 
 .score{
   position:absolute;
   color: white;
+  font-size: 22px;
 }
