--- a/game.css
+++ b/game.css
@@ -87,5 +87,30 @@ canvas{
   flex-direction: column;
   font-size: 50px;
   justify-content: space-around;
-  height: 30%;
+  height: 35%;
+  text-decoration: none;
+}
+
+a:hover{
+  background-color: white;
+}
+
+#music{
+  padding: 10px;
+  background-color: black;
+  color: white;
+}
+
+#playPauseBTN{
+  padding: 5px;
+}
+
+#playPauseBTN:hover{
+  background-color: black;
+  color: white;
+}
+
+.music-container{
+  display: flex;
+  flex-direction: column;
 }
